Bug 1981694 - Make completed tasks arrow visible in high contrast mode. r=home-newtab-reviewers,maxx
Differential Revision: https://phabricator.services.mozilla.com/D262816

--- a/browser/extensions/newtab/css/activity-stream.css
+++ b/browser/extensions/newtab/css/activity-stream.css
@@ -4484,7 +4484,7 @@ main section {
 .lists .completed-task-wrapper summary .completed-title::after {
   content: "";
   -moz-context-properties: fill;
-  fill: var(--text-color-deemphasized);
+  fill: var(--button-icon-fill);
   background-image: url("chrome://global/skin/icons/arrow-right.svg");
   height: var(--space-large);
   width: var(--space-large);
